force-app/main/default/objects/Candidate__c/fields/Applied_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Applied_Date_c__c</fullName>
    <label>Applied_Date__c</label>
    <type>Date</type>
</CustomField>