force-app/main/default/objects/Candidate__c/fields/Email_c__c.field-meta.xml
<CustomField>
    <fullName>Email_c__c</fullName>
    <label>Email__c</label>
    <type>Email</type>
</CustomField>