force-app/main/default/objects/Candidate__c/fields/Experience_Years_c__c.field-meta.xml
<CustomField>
    <fullName>Experience_Years_c__c</fullName>
    <label>Experience_Years__c</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>