force-app/main/default/objects/Candidate__c/fields/Phone_c__c.field-meta.xml
<CustomField>
    <fullName>Phone_c__c</fullName>
    <label>Phone__c</label>
    <type>Phone</type>
</CustomField>