force-app/main/default/objects/Candidate__c/fields/Resume_c__c.field-meta.xml
<CustomField>
    <fullName>Resume_c__c</fullName>
    <label>Resume__c</label>
    <type>Url</type>
</CustomField>