force-app/main/default/objects/Candidate__c/fields/Skills_c__c.field-meta.xml
<CustomField>
    <fullName>Skills_c__c</fullName>
    <label>Skills__c</label>
    <type>TextArea</type>
</CustomField>