force-app/main/default/objects/Candidate__c/validationRules/Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Email_c__c )</errorConditionFormula>
    <errorMessage>Candidate Email is required.</errorMessage>
</ValidationRule>